--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.9",
-    "@fortawesome/free-brands-svg-icons": "^5.6.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@material-ui/core": "^3.6.2",
-    "@material-ui/icons": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "chart.js": "^2.7.3",
     "chartjs-plugin-annotation": "^0.5.7",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "typeface-clear-sans": "0.0.44"
   },
   "scripts": {
@@ -26,7 +26,7 @@
   "devDependencies": {
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "react-test-renderer": "^16.6.3"
+    "react-test-renderer": "^16.7.0"
   },
   "browserslist": [
     ">0.2%",
